# pex_web_example

./: Dockerfile  Dockerfile_pex_tools  LICENSE  README.md  pyproject.toml
config/: gunicorn.config.py
src/web_pex/: __init__.py  simple_flask.py
