[project]
name = "web_pex"
version = "0.0.1"
authors = [
  { name="Chris White", email="no-spam@devnull.com" },
]
description = "A simple package to show off a pex web app"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "gunicorn",
    "setproctitle",
]
[project.urls]
"Homepage" = "dev.to"